# app/models/booking.js
@@ -12,28 +12,18 @@ module.exports = (sequelize, DataTypes) => {
     static associate(models) {
       // define association here
       this.belongsTo(models.passenger, { foreignKey: 'id_passenger' });
-      this.belongsTo(models.ticket,{ foreignKey: 'id_ticket' }); 
-      this.belongsTo(models.users,{ foreignKey: 'id_users' });
+      this.belongsTo(models.ticket, { foreignKey: 'id_ticket' });
+      this.belongsTo(models.Users, { foreignKey: 'id_users' });
     }
-
-    // static associate(models) {
-    //   // define association here
-    //   this.belongsTo(models.id_ticket,{ foreignKey: 'id_ticket' }); 
-    // }
-
-    // static associate(models) {
-    //   // define association here
-    //   this.belongsTo(models.users,{ foreignKey: 'id_users' });
-    // }
   }
   booking.init({
     id_passenger: DataTypes.INTEGER,
     id_ticket: DataTypes.INTEGER,
     id_users: DataTypes.INTEGER,
-    departureDate: DataTypes.DATE,
-    arrivalDate: DataTypes.DATE,
-    class: DataTypes.STRING,
-    total_booking: DataTypes.INTEGER
+    total_booking: {
+      type: DataTypes.INTEGER,
+      defaultValue: 1,
+    },
   }, {
     sequelize,
     modelName: 'booking',
